<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.fross</groupId>
	<artifactId>library</artifactId>
	<version>2023.12.03</version>
	<packaging>jar</packaging>

	<name>library</name>

	<url>http://fross.org/library</url>
	<description>Library of frequently used methods</description>

	<developers>
		<developer>
			<name>Michael Fross</name>
			<email>michael@fross.org</email>
			<url>https://fross.org</url>
		</developer>
	</developers>

	<organization>
		<name>Sinister Igloo Softworks</name>
		<url>fross.org</url>
	</organization>

	<inceptionYear>2018</inceptionYear>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub frossm Library Package</name>
			<url>https://maven.pkg.github.com/frossm/library</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>11</maven.compiler.release>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<!-- ========================================================================================== -->
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin          -->
				<!-- ========================================================================================== -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>

			<!-- ========================================================================================== -->
			<!-- Maven's Automated Testing Surefire plugin                                                  -->
			<!-- ========================================================================================== -->
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
		<dependency>
			<groupId>org.fusesource.jansi</groupId>
			<artifactId>jansi</artifactId>
			<version>2.4.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
		<!-- This will pull in needed junit5 dependencies  -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

</project>